# hotmart-api

./: .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md
docs/Client/: authentication.md
hotmart_python/: __init__.py  api.py  decorators.py  hotmart.py
tests/: test_coupons.py  test_decorators.py  test_helpers.py  test_sales.py  test_subscriptions.py
tests/cli/: checks.py
tests/utils/: utils.py
