[tool.poetry]
name = "hotmart-python"
version = "0.5.0"
description = "A Python library for the Hotmart API, simplifying endpoint access and resource management."
authors = ["Matheus Tenório <matheusct16@gmail.com>"]
license = "Apache License, Version 2.0"
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.9"
coloredlogs = "^15.0.1"
requests = "^2.31.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
black = "^24.4.2"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-dracula-theme = "^1.0.7"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.5"
pymdown-extensions = "^10.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=hotmart_python -vv"
post_test = "coverage html"
